--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<p><a href = 'App-prefs://prefs:root=Safari'><button>Safari設定</button></a></p>
-<p><a href = 'App-prefs://prefs:root=Chrome'><button>Chrome設定</button></a></p>
-<p><a href = 'App-prefs://prefs:root=Edge'><button>Edge設定</button></a></p>
+<p><a href = 'prefs:root=SAFARI'><button>Safari設定</button></a></p>
+<p><a href = 'prefs:root=CHROME'><button>Chrome設定</button></a></p>
+<p><a href = 'prefs:root=EDGE'><button>Edge設定</button></a></p>
 </html>
