--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<p><a href = 'prefs:root=SAFARI'><button>Safari設定</button></a></p>
+<p><button onClick="window.location.href = 'App-prefs://prefs:root=SAFARI';">Safari設定</button></p>
 <p><a href = 'prefs:root=CHROME'><button>Chrome設定</button></a></p>
 <p><a href = 'prefs:root=EDGE'><button>Edge設定</button></a></p>
 </html>
