--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-<p><a href = 'prefs:root=SAFARI'><button>SAFARI設定URL</button></a></p>
+<p><a href = 'app-prefs:root'><button>設定TOP</button></a></p>  
+<p><a href = 'prefs:root=SAFARI'><button>SAFARI設定</button></a></p> 
 <p><a href = 'prefs:root=CHROME'><button>Chrome設定URL</button></a></p>
 <p><a href = 'prefs:root=EDGE'><button>Edge設定URL</button></a></p>
 <p><button onClick="window.location.href = 'App-prefs://prefs:root=SAFARI';">Safari設定JS</button></p>
