--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<p><a href = 'app-prefs:root'><button>設定TOP</button></a></p>  
+<p><a href = 'App-prefs://prefs:root=Settings'><button>設定TOP2</button></a></p>  
 <p><a href = 'prefs:root=SAFARI'><button>SAFARI設定</button></a></p> 
 <p><a href = 'prefs:root=CHROME'><button>Chrome設定URL</button></a></p>
 <p><a href = 'prefs:root=EDGE'><button>Edge設定URL</button></a></p>
