--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <p><a href = 'App-prefs://prefs:root=Settings'><button>設定TOP</button></a></p>  
 <p><a href = 'App-prefs://prefs:root=SAFARI'><button>SAFARI設定</button></a></p> 
 <p><a href = 'prefs://prefs:root=SAFARI'><button>SAFARI設定</button></a></p> 
+<p><a href = 'prefs:root://prefs:root=SAFARI'><button>SAFARI設定</button></a></p> 
+<p><a href = 'prefs:root://root=SAFARI'><button>SAFARI設定</button></a></p> 
 <p><a href = 'prefs://root=SAFARI'><button>SAFARI設定</button></a></p> 
 <p><a href = 'App-prefs://prefs:root=SAFARI'><button>SAFARI設定</button></a></p> 
 <p><a href = 'App-prefs://prefs:root=CHROME'><button>Chrome設定URL</button></a></p>
