--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <p><a href = 'App-prefs://prefs:root=Settings'><button>設定TOP</button></a></p>  
-<p><a href = 'App-prefs://prefs:root=SAFARI'><button>SAFARI設定</button></a></p> 
-<p><a href = 'prefs://prefs:root=SAFARI'><button>SAFARI設定</button></a></p> 
-<p><a href = 'prefs:root://prefs:root=SAFARI'><button>SAFARI設定</button></a></p> 
-<p><a href = 'prefs:root://root=SAFARI'><button>SAFARI設定</button></a></p> 
-<p><a href = 'prefs://root=SAFARI'><button>SAFARI設定</button></a></p> 
-<p><a href = 'App-prefs://prefs:root=SAFARI'><button>SAFARI設定</button></a></p> 
+<p><a href = 'App-prefs://prefs:root=SAFARI'><button>SAFARI設定1</button></a></p> 
+<p><a href = 'prefs://prefs:root=SAFARI'><button>SAFARI設定2</button></a></p> 
+<p><a href = 'prefs:root://prefs:root=SAFARI'><button>SAFARI設定3</button></a></p> 
+<p><a href = 'prefs:root://root=SAFARI'><button>SAFARI設定4</button></a></p> 
+<p><a href = 'prefs://root=SAFARI'><button>SAFARI設定5</button></a></p> 
+<p><a href = 'App-prefs://prefs:root=SAFARI'><button>SAFARI設定6</button></a></p> 
 <p><a href = 'App-prefs://prefs:root=CHROME'><button>Chrome設定URL</button></a></p>
 <p><a href = 'App-prefs://prefs:root=EDGE'><button>Edge設定URL</button></a></p>
 </html>
