--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
 <p><a href = 'prefs:root://root=SAFARI'><button>SAFARI設定4</button></a></p> 
 <p><a href = 'prefs://root=SAFARI'><button>SAFARI設定5</button></a></p> 
 <p><a href = 'App-prefs://prefs:root=SAFARI'><button>SAFARI設定6</button></a></p> 
-<p><a href = 'App-prefs://prefs:root=CHROME'><button>Chrome設定URL</button></a></p>
-<p><a href = 'App-prefs://prefs:root=EDGE'><button>Edge設定URL</button></a></p>
+<p><a href = 'App-prefs://SAFARI'><button>SAFARI設定7</button></a></p> 
 </html>
