--- a/index.html
+++ b/index.html
@@ -7,4 +7,8 @@
 <p><a href = 'prefs://root=SAFARI'><button>SAFARI設定5</button></a></p> 
 <p><a href = 'App-prefs://prefs:root=SAFARI'><button>SAFARI設定6</button></a></p> 
 <p><a href = 'App-prefs://SAFARI'><button>SAFARI設定7</button></a></p> 
+<p><a href = 'App-prefs://root=SAFARI'><button>SAFARI設定8</button></a></p>
+<p><a href = 'prefs:root=SAFARI'><button>SAFARI設定9</button></a></p> 
+<p><a href = 'app-prefs://SAFARI'><button>SAFARI設定10</button></a></p> 
+<p><a href = 'app-prefs://root=SAFARI'><button>SAFARI設定11</button></a></p>
 </html>
