--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p><a href = 'prefs:root://prefs:root=SAFARI'><button>SAFARI設定3</button></a></p> 
 <p><a href = 'prefs:root://root=SAFARI'><button>SAFARI設定4</button></a></p> 
 <p><a href = 'prefs://root=SAFARI'><button>SAFARI設定5</button></a></p> 
-<p><a href = 'App-prefs://prefs:root=SAFARI'><button>SAFARI設定6</button></a></p> 
+<p><a href = 'App-prefs://app-prefs:root=SAFARI'><button>SAFARI設定6</button></a></p> 
 <p><a href = 'App-prefs://SAFARI'><button>SAFARI設定7</button></a></p> 
 <p><a href = 'App-prefs://root=SAFARI'><button>SAFARI設定8</button></a></p>
 <p><a href = 'prefs:root=SAFARI'><button>SAFARI設定9</button></a></p> 
