--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
 <p><a href = 'prefs:root=SAFARI'><button>SAFARI設定9</button></a></p> 
 <p><a href = 'app-prefs://SAFARI'><button>SAFARI設定10</button></a></p> 
 <p><a href = 'app-prefs://root=SAFARI'><button>SAFARI設定11</button></a></p>
+<p><a href = 'app-prefs://prefs:root=SAFARI'><button>SAFARI設定12</button></a></p>
 </html>
